[gd_scene load_steps=10 format=3 uid="uid://3nngb3oqocel"]

[ext_resource type="Script" path="res://Scripts/Weapons/tongue/tongue.gd" id="1_8iam1"]
[ext_resource type="Texture2D" uid="uid://xtpufuwxjqss" path="res://Images/Weapons/Tongue/frog_tongue_mid.png" id="1_rrm7u"]
[ext_resource type="Texture2D" uid="uid://dg16hufuwjsft" path="res://Images/Weapons/Tongue/frog_tongue_end.png" id="2_b5uqh"]
[ext_resource type="Script" path="res://Scripts/Weapons/tongue/tongue_mid.gd" id="3_g43cs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y6jx"]
size = Vector2(7, 12)

[sub_resource type="Animation" id="Animation_5koq2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TongueHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lf8ni"]
resource_name = "attack"
length = 0.001
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TongueHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u42jl"]
resource_name = "hit"
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TongueHit/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_js3jt"]
_data = {
"RESET": SubResource("Animation_5koq2"),
"attack": SubResource("Animation_lf8ni"),
"hit": SubResource("Animation_u42jl")
}

[node name="Tongue" type="CharacterBody2D"]
z_index = 10
z_as_relative = false
script = ExtResource("1_8iam1")

[node name="Timer" type="Timer" parent="."]

[node name="TongueHit" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueHit"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_0y6jx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Tongue" type="Sprite2D" parent="."]
scale = Vector2(1.175, 1.23214)
texture = ExtResource("2_b5uqh")

[node name="TongueMid" type="Line2D" parent="."]
top_level = true
z_index = 10
z_as_relative = false
width = 20.0
texture = ExtResource("1_rrm7u")
texture_mode = 2
script = ExtResource("3_g43cs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_js3jt")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="TongueHit" to="." method="_on_tongue_hit_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
